testsuite/tests/polykinds/T17963.stderr

T17963.hs:15:23: error:
    • Couldn't match a lifted type with an unlifted type
      ‘rep1’ is a rigid type variable bound by
        the class declaration for ‘Category'’
        at T17963.hs:13:27-29
      When matching kinds
        k0 :: *
        ob :: TYPE rep1
      Expected kind ‘ob’, but ‘a’ has kind ‘k0’
    • In the first argument of ‘cat’, namely ‘a’
      In the type signature: id' :: forall a. cat a a
      In the class declaration for ‘Category'’
